# zephyr-doom

./: .gitignore  .pre-commit-config.yaml  README.adoc  README.rst  apply_zephyr_patches.sh  requirements.txt
.devcontainer/: Dockerfile  README.adoc  devcontainer.json  initialize.sh
.devcontainer/scripts/: initialize.sh  setup-git.sh  setup-nRF-env.sh  setup-python-venv.sh
.devcontainer/templates/: .gitconfig.template
.github/scripts/: config.sh  parse-cppcheck-logfile.sh  parse-logfile.sh
.github/workflows/: build-artifacts.yml  build-package-artifacts.yml  cppcheck-lint.yml  cppcheck-verification.yml  pre-commit-checks.yml  pre-commit-verification.yml  python-verification.yml  release-repository.yml  shellcheck-verification.yml
blinky/: .gitignore  CMakeLists.txt  Kconfig.sysbuild  __repo__  mcux_include.json
blinky/src/: i_sound.c  i_video.c  m_misc.c  main.c  n_display.c  n_fs.h  n_i2s_sound.c  v_video.c
docs/: audio_implementation.adoc  devcontainer.adoc  game-data.adoc  gamepad.adoc  keyboard.adoc  self-hosted-runner.adoc  zephyr-doom.adoc
gamedata/: README.adoc  README.rst
gamepad/microbit/: .gitignore  CMakeLists.txt  README.adoc  README.rst  app.overlay  prj.conf  prj_minimal.conf
keyboard/: README.adoc  README.md  keyboard.py
nxp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.rst  prj.conf
nxp/boards/: frdm_mcxn947_mcxn947_cpu0.overlay
nxp/src/: d_loop.c  hardfault_handler_gcc.c  main.c  n_buttons.c  n_display.c  n_fs.h  n_i2s.c  n_i2s.h  n_i2s_sound.c  portable_stubs.c  w_wad.c  z_native.c
patches/zephyr/: 0001-spi-nxp-lpspi-dma-fix-stale-callback-race.patch  README-0001-spi-nxp-lpspi-dma-fix-stale-callback-race.md  README.md
runner/: README.adoc
runner/scripts/: Dockerfile  build-runner-image.sh  configure-runner-env.sh  download-runner-tooling.sh  (+5 more)
scripts/: config.sh  parse-cppcheck-logfile.sh
unified_implementation/: .gitignore  CMakeLists.txt  Kconfig  prj.conf
zephyrdoom/: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  audio_implementation.adoc  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
zephyrdoom/boards/: nrf5340dk_nrf5340_cpuapp.overlay
zephyrdoom/dts/bindings/display/: ftdi,ft800.yaml
zephyrdoom/src/: FT810.h  bluetooth_control.c  bluetooth_control.h  bluetooth_control_keyboard.h  bluetooth_control_microbit.h  bluetooth_control_xbox.h  bluetooth_stuff.h  bluetooth_stuff.txt  d_dedicated.c  d_event.c  d_event.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  d_ticcmd.h  deh_defs.h  deh_io.c  deh_io.h  deh_main.c  deh_main.h  deh_mapping.c  deh_mapping.h  deh_str.c  deh_str.h  deh_text.c  doomkeys.h  doomtype.h  hardfault_handler_gcc.c  i_cdmus.h  i_endoom.h  i_input.c  i_input.h  i_joystick.c  i_joystick.h  i_sound.c  i_sound.h  i_swap.h  (+89 more)
zephyrdoom/src/config/: board_config.h  config.h  doom_config.h  nrf_error.h  nrfx_config.h  nrfx_glue.h  nrfx_log.h  sdk_config.h  sdk_errors.h
zephyrdoom/src/doom/: am_map.c  am_map.h  d_englsh.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_player.h  d_textur.h  d_think.h  deh_ammo.c  deh_bexstr.c  deh_cheat.c  deh_doom.c  deh_frame.c  deh_misc.c  deh_misc.h  deh_ptr.c  deh_sound.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  info.c  (+63 more)
(+111 files in other folders)
